# axum-skeleton

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  TO_BE_REMOVED.rs  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.githooks/: commit-msg  post-checkout  pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml  pull-request.yml
axum-skeleton/: Cargo.toml
axum-skeleton-worker/: Cargo.toml
axum-skeleton/src/: main.rs
config/: base.yml  production.yml
crates/actions/: Cargo.toml
crates/actions/src/: error.rs  lib.rs  prelude.rs  users.rs
crates/actions/src/entities/: users.rs
crates/actions/src/validators/: password.rs
crates/auth/: Cargo.toml
crates/auth/sql/: delete_user_confirmation_by_id.sql  delete_user_confirmation_by_user_id.sql  find_user_by_email.sql  get_user_by_id.sql  get_user_confirmation_by_id.sql
crates/auth/src/: lib.rs  prelude.rs
crates/auth/src/api/: auth.rs  mod.rs  user_confirmation.rs
crates/auth/src/api/tests/: confirm_email.hurl  login.hurl  logout.hurl  mod.rs  utils.rs
crates/auth/src/application/: confirm_email.rs  login.rs  logout.rs  mod.rs  send_email_confirmation.rs
crates/auth/src/domain/: auth.rs  auth_backend.rs  auth_user.rs  error.rs  mod.rs  port.rs
crates/auth/src/extractor/: auth_user.rs  mod.rs
crates/auth/src/infrastructure/: mod.rs
crates/auth/src/tests/: mock.rs  mod.rs  utils.rs
crates/common-core/: Cargo.toml
crates/common-core/src/: error.rs  lib.rs  use_case.rs
crates/common-core/src/domain/: error.rs  mod.rs  state.rs
crates/common-state/: Cargo.toml
crates/common-state/src/: lib.rs  state.rs
crates/common-web/: Cargo.toml
crates/common-web/src/: extractor.rs  lib.rs
crates/configuration/: Cargo.toml
crates/configuration/data/: base.yml  development.yml  production.yml  testing.yml
crates/configuration/src/: config.rs  error.rs  lib.rs
crates/database/: Cargo.toml  build.rs
crates/database/derives/: Cargo.toml
crates/database/derives/src/: export.rs  lib.rs  sqlx_pg_insertable.rs  try_from_vec.rs
crates/database/derives/tests/: export.rs  mod.rs  sqlx_pg_insertable.rs  try_from_vec.rs
crates/database/migrations/: 20240117201401_add_users_table.up.sql
crates/database/scripts/sql/users/: find-by-name.sql
crates/database/scripts/users/: find-by-filters.sql
crates/database/src/: db.rs  error.rs  lib.rs  password.rs  prelude.rs  requests.rs  traits.rs
crates/database/src/domain/: db.rs  error.rs  mod.rs
crates/database/src/extractor/: mod.rs  postgres.rs  redis.rs
crates/database/src/models/: mod.rs  users.rs
crates/database/src/traits/: mod.rs
crates/database/src/traits/sqlx/: mod.rs
crates/database/src/traits/sqlx/postgres/: crud.rs  mod.rs
crates/k8s/: Cargo.toml
crates/k8s/src/: lib.rs
crates/mailer/: Cargo.toml
crates/mailer/src/: lib.rs  prelude.rs
crates/mailer/src/domain/: error.rs  mod.rs  port.rs
crates/mailer/src/provider/: fake.rs  mod.rs
crates/sanity/: Cargo.toml
crates/sanity/config/: sanity.yml
crates/sanity/data/dashboard/: build-timings.html  crates.html  docs-coverage.html  documentation.html  index.html  tests-coverage.html  tests-plans-coverage.html
crates/sanity/data/dashboard/css/: open-sans.css  sanity.css
crates/sanity/data/dashboard/js/: sanity.js
crates/sanity/src/: config.rs  error.rs  lib.rs  prelude.rs
crates/sanity/src/api/: mod.rs
crates/sanity/src/domain/: config.rs  error.rs  mod.rs
crates/security/: Cargo.toml
crates/security/src/: error.rs  lib.rs  password.rs  prelude.rs
crates/server/: Cargo.toml
crates/server/config/: base.yml
crates/server/src/: auth.rs  config.rs  cors.rs  error.rs  extractors.rs  lib.rs  openapi.rs  prelude.rs  settings.rs  state.rs  timeout.rs  tracing.rs
crates/server/src/extractors/: auth_user.rs  db.rs  mod.rs
crates/server/src/layers/: auth.rs  cors.rs  mod.rs  timeout.rs  tracing.rs
crates/server/src/routes/: api.rs  auth.rs  k8s.rs  mod.rs  openapi.rs
crates/server/src/routes/api/: mod.rs
crates/server/src/routes/api/v1/: mod.rs
crates/server/src/routes/api/v1/users/: mod.rs
crates/server/src/routes/k8s/: mod.rs
crates/server/src/tests/: auth.rs  common.rs  mod.rs  protected.rs  users.rs
crates/server/src/tests/common/: mod.rs
crates/server/src/types/: form_or_json.rs  mod.rs
crates/server/tests/: auth.rs  mod.rs  protected.rs  users.rs
crates/test-utils/: Cargo.toml
crates/test-utils/derives/: Cargo.toml
crates/test-utils/derives/src/: lib.rs
crates/test-utils/derives/tests/: hook.rs  mod.rs
crates/test-utils/src/: database.rs  lib.rs  rand.rs  runner.rs  server.rs
crates/user/: Cargo.toml
crates/user/sql/: create.sql  create_confirmation.sql  delete_by_id.sql  exists.sql  get_by_filters.sql  get_by_id.sql  set_password.sql  update.sql
crates/user/src/: lib.rs  prelude.rs
crates/user/src/api/: mod.rs  user.rs
crates/user/src/api/tests/: delete_by_id.hurl  get_all.hurl  get_by_id.hurl  get_current.hurl  mod.rs  user.rs  utils.rs
crates/user/src/application/: create_user.rs  delete_user_by_id.rs  get_user_by_id.rs  get_users_by_filters.rs  mod.rs  set_user_password.rs  update_user.rs  upsert_user.rs
crates/user/src/domain/: error.rs  mod.rs  port.rs  user.rs  user_confirmation.rs
crates/user/src/infrastructure/: mod.rs  user.rs
crates/user/src/tests/: mod.rs  utils.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs  filesystem.rs  hashing.rs  lib.rs  password.rs
data/tests/: populate.sql  seed.sql  vars.env
docs/: coding-style.md  commands.md  configuration.md  development.md  docker.md  dotenv.md  get-started.md  git-hooks.md  logging.md  setup.md  sqlx.md  testing.md  todo.md
docs/development/: architecture.md  coding-style.md  git-hooks.md  logging.md  sanity.md  sqlx.md  testing.md
migrations/: 20240117201401_add_users_table.down.sql  20240117201401_add_users_table.up.sql
scripts/sanity/coverage/: doc-coverage-2-html.py  (+1 more)
scripts/sql/: get_user_by_email.sql
scripts/tests/: run_api_tests.sh
src/: main.rs  worker.rs
(+5 files in other folders)
