[package]
name = "axum-skeleton"
version = "0.1.0"
edition = "2021"
authors = ["Mathieu Hardy <mhardy2008@gmail.com>"]
description = "An Axum skeleton to start backend web application"
readme = "README.md"
homepage = "https://github.com/mathieuhardy/axum-skeleton"
repository = "https://github.com/mathieuhardy/axum-skeleton"
license-file = "LICENSE.txt"
default-run = "axum-skeleton"

[[bin]]
name = "axum-skeleton"
path = "src/main.rs"

[[bin]]
name = "axum-skeleton-worker"
path = "src/worker.rs"

[workspace]
members = [
  "crates/database",
  "crates/server",
]

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "fmt"]}

server = { path = "crates/server", features = ["k8s", "sanity"] }
