[package]
name = "axum-skeleton"
version = "0.1.0"
edition = "2021"
authors = ["Mathieu Hardy <mhardy2008@gmail.com>"]
description = "An Axum skeleton to start backend web application"
readme = "README.md"
homepage = "https://github.com/mathieuhardy/axum-skeleton"
repository = "https://github.com/mathieuhardy/axum-skeleton"
license-file = "LICENSE.txt"
default-run = "axum-skeleton"

[[bin]]
name = "axum-skeleton"
path = "src/main.rs"

[[bin]]
name = "axum-skeleton-worker"
path = "src/worker.rs"

[workspace]
members = [
  "crates/actions",
  "crates/database",
  "crates/sanity",
  "crates/server",
  "crates/test-utils",
  "crates/utils",
]

[dependencies]
dotenvy = { version = "0.15.7", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "fmt"]}

server = { path = "crates/server", features = ["k8s", "sanity"] }
