[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true, default-features = false }
axum = { workspace = true, default-features = false }
bb8 = { workspace = true, default-features = false }
bb8-redis = { workspace = true, default-features = false }
sqlx = { workspace = true, default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid"
] }
thiserror = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = false, features = ["attributes", "log", "std"] }

common-core = { workspace = true, default-features = false }
