[package]
name = "sanity"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, default-features = false }
config = { workspace = true, default-features = false, features = ["yaml"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true, default-features = false }
tower-http = { workspace = true, default-features = false, features = ["fs", "redirect"] }

common-core = { workspace = true, default-features = false }
utils = { workspace = true, default-features = false, features = ["fs"] }
