[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.78", default-features = false }
axum = { version = "0.7.4", default-features = false, features = ["form", "http2", "json", "macros", "query", "tokio"] }
axum-login = { version = "0.15.0", default-features = false }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58", default-features = false }
time = { version = "0.3.34", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["full"] }
tower-http = { version = "0.5.2", default-features = false, features = ["compression-full", "cors", "fs", "redirect", "request-id", "sensitive-headers","timeout" ,"trace"] }
tower-sessions = { version = "0.12.0", default-features = false, features = ["signed"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes", "log", "std"] }
uuid = { version = "1.8.0", default-features = false }
validator = { version = "0.15", default-features = false }

actions = { path = "../actions", default-features = false }
database = { path = "../database", default-features = false }
sanity = { path = "../sanity", default-features = false, optional = true }
utils = { path = "../utils", default-features = false, features = ["fs"] }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
serial_test = { version = "3.0.0", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }

test-utils = { path = "../test-utils", default-features = false, features = ["derives"] }

[features]
k8s = []
sanity = ["dep:sanity"]
