[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true, default-features = false }
axum = { workspace = true, default-features = false, features = ["form", "http1", "json", "macros", "query", "tokio"] }
config = { workspace = true, default-features = false, features = ["yaml"] }
derive_more = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
sqlx = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }
time = { workspace = true, default-features = false }
tokio = { workspace = true, default-features = false, features = ["full"] }
tower = { workspace = true, default-features = false }
tower-http = { workspace = true, default-features = false, features = [
    "compression-full",
    "cors",
    "fs",
    "redirect",
    "request-id",
    "sensitive-headers",
    "timeout",
    "trace"
] }
tower-sessions = { workspace = true, default-features = false, features = ["axum-core", "memory-store", "signed"] }
tracing = { workspace = true, default-features = false, features = ["attributes", "log", "std"] }
uuid = { workspace = true, default-features = false }

auth = { workspace = true, default-features = false }
database = { workspace = true, default-features = false }
common-core = { workspace = true, default-features = false }
k8s = { workspace = true, default-features = false, optional = true }
sanity = { workspace = true, default-features = false, optional = true }
security = { workspace = true, default-features = false }
user = { workspace = true, default-features = false }
utils = { workspace = true, default-features = false, features = ["fs", "hashing"] }

[features]
k8s = ["dep:k8s"]
sanity = ["dep:sanity"]
