[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15.7", default-features = false }
reqwest = { version = "0.11.27", default-features = false, features = ["cookies", "json"] }
sqlx = { version = "0.7.4", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
tokio = { version = "1.35.1", default-features = false, features = ["full"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes", "log", "std"] }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "fmt"]}

server = { path = "../server", default-features = false }
test-utils-derives = { path = "derives", default-features = false, optional = true }
utils = { path = "../utils", default-features = false, features = ["fs"] }

[features]
derives = ["dep:test-utils-derives"]
