[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15.7", default-features = false }
http-body-util = { version = "0.1.1", default-features = false }
mime = { version = "0.3.17", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.115", default-features = false }
sqlx = { version = "0.7.4", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
tokio = { version = "1.35.1", default-features = false, features = ["full"] }
tower = { version = "0.4.13", default-features = false }

server = { path = "../server", default-features = false }
test-utils-derives = { path = "derives", default-features = false, optional = true }
utils = { path = "../utils", default-features = false, features = ["fs"] }

[features]
derives = ["dep:test-utils-derives"]
