[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, default-features = false, optional = true }
dotenvy = { workspace = true, default-features = false, optional = true }
http-body-util = { workspace = true, default-features = false, optional = true }
mime = { workspace = true, default-features = false, optional = true }
serde = { workspace = true, default-features = false, optional = true }
serde_json = { workspace = true, default-features = false, optional = true }
sqlx = { workspace = true, default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
tokio = { workspace = true, default-features = false, features = ["full"], optional = true }
tower = { workspace = true, default-features = false, optional = true }
tracing = { workspace = true, default-features = false, features = ["attributes", "log", "std"], optional = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["ansi", "env-filter", "fmt"], optional = true }
uuid = { workspace = true, default-features = false, features = ["v4"] }

auth = { workspace = true, default-features = false, optional = true }
server = { workspace = true, default-features = false, optional = true }
test-utils-derives = { workspace = true, default-features = false, optional = true }
utils = { workspace = true, default-features = false, features = ["fs"], optional = true }

[features]
database = ["dep:dotenvy"]
derives = ["dep:test-utils-derives"]
rand = []
runner = ["dep:tokio"]
server = [
    "auth",
    "database",
    "dep:axum",
    "dep:dotenvy",
    "dep:http-body-util",
    "dep:mime",
    "dep:serde",
    "dep:serde_json",
    "dep:server",
    "dep:tower",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:utils",
]
