[package]
name = "test-utils-derives"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, default-features = false }
quote = { workspace = true, default-features = false }
syn = { workspace = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["full"] }

test-utils = { workspace = true, default-features = false, features = ["runner"] }
